--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -721,7 +721,11 @@ header {
             display: block;
           }
           form {
+            input[type=text], input[type=tel], input[type=password] {
+              -webkit-appearance: none;
+            }
             input {
+              -webkit-appearance: none;
               width: 100%;
               height: 48px;
               background-color: $bg-color;
